fixed alignment of ul containing quiz options

--- a/main.css
+++ b/main.css
@@ -38,19 +38,27 @@ button {
     justify-content: space-evenly;
 }
 
+.div-ul-container {
+    display: flex;
+    justify-content: center;
+}
+
 .answer-ul {
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
     align-items: center;
-    /* flex-wrap: wrap; */
+    flex-wrap: wrap;
+    width: 750px;
+    /* border: 1px solid black; */
 }
 
 /* for larger screens */
 @media screen and (min-width: 640px){
     .answer-ul {
         flex-direction: row;
-        justify-content: flex-end;
+        justify-content: center;
+        /* align-items: center; */
     }
 } 
 
